--- a/404.html
+++ b/404.html
@@ -177,28 +177,30 @@ left: 0;
 }
 .accessibility-btn {
 position: fixed;
-top: 20px;
-left: 10px;
+bottom: 20px;
+left: 50%;
+transform: translateX(-50%);
 z-index: 100;
-background: #ff7707;
-color: white;
-width: 44px;
-height: 44px;
-border-radius: var(--radius-sm);
+border: 2px solid #ff7707;
+background: var(--color-lighter);
+color: var(--color-primary);
+padding: 0.75rem 1.5rem;
+border-radius: 50px;
 display: flex;
 align-items: center;
 justify-content: center;
 cursor: pointer;
 box-shadow: 0 2px 10px rgba(0,0,0,0.2);
 transition: all 0.3s ease;
-border: none;
+gap: 0.5rem;
+font-weight: 500;
 }
 .accessibility-btn:hover {
-transform: scale(1.1);
+transform: translateX(-50%) scale(1.05);
 }
 .accessibility-btn svg {
-width: 24px;
-height: 24px;
+width: 20px;
+height: 20px;
 }
 .modal-header {
 display: flex;
@@ -365,7 +367,7 @@ border-radius: var(--radius-md);
 max-width: 500px;
 width: 100%;
 box-shadow: var(--shadow-md);
-max-height: 70vh;
+max-height: 90vh;
 overflow-y: auto;
 }
 .modal-content::-webkit-scrollbar {
@@ -438,7 +440,7 @@ font-size: var(--text-sm);
 footer {
 width: 100%;
 background: var(--gradient);
-padding: 3rem 2rem;
+padding: 3rem 2rem 5rem;
 text-align: center;
 margin-top: auto;
 }
@@ -480,6 +482,7 @@ color: var(--color-primary);
 }
 .copyright {
 font-size: 0.9rem;
+margin-bottom: 40px;
 color: var(--color-secondary);
 }
 .copyright a {
@@ -561,19 +564,24 @@ align-items: flex-end;
 }
 .modal-content {
 width: 100%;
+max-height: 80vh;
+}
+.accessibility-btn {
+width: auto;
+padding: 0.75rem 1rem;
+font-size: 0.875rem;
 }
 }
 </style>
 </head>
 <body>
 <a href="#main-content" class="skip-link">Skip to main content</a>
-
 <button class="accessibility-btn" aria-label="Accessibility Options">
 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
 <path d="M12 2a2 2 0 110 4 2 2 0 010-4zm8 5H4a1 1 0 000 2h7v3.5l-3.1 7.35a1 1 0 001.8.8L12 14.62l2.3 6.03a1 1 0 001.8-.8L13 12.5V9h7a1 1 0 000-2z"/>
 </svg>
+Accessibility
 </button>
-
 <header>
 <a href="/"><img src="/assets/images/gbemisola-oyeniyi.svg" alt="Gbemisola Oyeniyi Logo" class="logo" id="siteLogo"></a>
 </header>
