--- a/index.html
+++ b/index.html
@@ -786,7 +786,7 @@ View
 </svg>
 </div>
 </a>
-<a href="https://github.com/zysculpt" class="feature-card" target="_blank" rel="noopener noreferrer">
+<a href="https://zysculptlabs.github.io" class="feature-card" target="_blank" rel="noopener noreferrer">
 <div class="feature-icon">
 <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
 <rect x="2" y="7" width="20" height="14" rx="2" ry="2"></rect>
