--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
   "@context": "https://schema.org",
   "@type": "SoftwareApplication",
   "name": "Zysculpt",
-  "url": "https://github.com/zysculpt",
+  "url": "https://zysculptlabs.github.io",
   "description": "A free, open-source career assistant for job seekers.",
   "applicationCategory": "CareerTool",
   "operatingSystem": "Web",
@@ -824,7 +824,7 @@ View
 </svg>
 </div>
 </a>
-<a href="https://github.com/openinfong" class="feature-card" target="_blank" rel="noopener noreferrer">
+<a href="https://openinfong.github.io" class="feature-card" target="_blank" rel="noopener noreferrer">
 <div class="feature-icon">
 <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-layers" viewBox="0 0 24 24">
 <polygon points="12 2 2 7 12 12 22 7 12 2"></polygon>
